Fixed footer overflow

--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -25,11 +25,16 @@
     .footer {
         flex-direction: row;
         justify-content: space-between;
-        padding: .5rem 2rem;
+        padding: .5rem 0;
     }
 
     .footer__image {
         width: 10%;
         justify-content: center;
+        padding-left: 2rem;
+    }
+
+    .footer__text:last-child{
+        padding-right: 2rem;
     }
 }
